--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animejs": "^3.0.1",
     "axios": "^0.19.0",
     "enzyme-adapter-react-16": "^1.13.2",
     "react": "^16.8.6",
