--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "enzyme-adapter-react-16": "^1.13.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-test-renderer": "^16.8.6"
   },
