--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
+  "scripts": {
+    "start:server": "yarn --cwd ./front-end/ run start"
+
+  },
   "dependencies": {
-    "@babel/plugin-proposal-export-default-from": "^7.2.0"
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "concurrently": "^4.1.0"
   },
   "devDependencies": {
     "enzyme": "^3.9.0"
